docs-archive/apache-airflow-providers-airbyte/3.8.1/_sources/_api/airflow/providers/airbyte/hooks/airbyte/index.rst.txt
:py:mod:`airflow.providers.airbyte.hooks.airbyte`
=================================================

.. py:module:: airflow.providers.airbyte.hooks.airbyte


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.airbyte.hooks.airbyte.AirbyteHook




Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.providers.airbyte.hooks.airbyte.T


.. py:data:: T

   

.. py:class:: AirbyteHook(airbyte_conn_id = 'airbyte_default', api_version = 'v1', api_type = 'config')


   Bases: :py:obj:`airflow.providers.http.hooks.http.HttpHook`

   Hook for Airbyte API.

   :param airbyte_conn_id: Optional. The name of the Airflow connection to get
       connection information for Airbyte. Defaults to "airbyte_default".
   :param api_version: Optional. Airbyte API version. Defaults to "v1".
   :param api_type: Optional. The type of Airbyte API to use. Either "config" or "cloud". Defaults to "config".

   .. py:attribute:: conn_name_attr
      :value: 'airbyte_conn_id'

      

   .. py:attribute:: default_conn_name
      :value: 'airbyte_default'

      

   .. py:attribute:: conn_type
      :value: 'airbyte'

      

   .. py:attribute:: hook_name
      :value: 'Airbyte'

      

   .. py:attribute:: RUNNING
      :value: 'running'

      

   .. py:attribute:: SUCCEEDED
      :value: 'succeeded'

      

   .. py:attribute:: CANCELLED
      :value: 'cancelled'

      

   .. py:attribute:: PENDING
      :value: 'pending'

      

   .. py:attribute:: FAILED
      :value: 'failed'

      

   .. py:attribute:: ERROR
      :value: 'error'

      

   .. py:attribute:: INCOMPLETE
      :value: 'incomplete'

      

   .. py:method:: get_headers_tenants_from_connection()
      :async:

      Get Headers, tenants from the connection details.


   .. py:method:: get_job_details(job_id)
      :async:

      Use Http async call to retrieve metadata for a specific job of an Airbyte Sync.

      :param job_id: The ID of an Airbyte Sync Job.


   .. py:method:: get_job_status(job_id)
      :async:

      Retrieve the status for a specific job of an Airbyte Sync.

      :param job_id: The ID of an Airbyte Sync Job.


   .. py:method:: wait_for_job(job_id, wait_seconds = 3, timeout = 3600)

      Poll a job to check if it finishes.

      :param job_id: Required. Id of the Airbyte job
      :param wait_seconds: Optional. Number of seconds between checks.
      :param timeout: Optional. How many seconds wait for job to be ready.
          Used only if ``asynchronous`` is False.


   .. py:method:: submit_sync_connection(connection_id)

      Submit a job to a Airbyte server.

      :param connection_id: Required. The ConnectionId of the Airbyte Connection.


   .. py:method:: get_job(job_id)

      Get the resource representation for a job in Airbyte.

      :param job_id: Required. Id of the Airbyte job


   .. py:method:: cancel_job(job_id)

      Cancel the job when task is cancelled.

      :param job_id: Required. Id of the Airbyte job


   .. py:method:: test_connection()

      Tests the Airbyte connection by hitting the health API.



